# Limom

./: .gitignore  Makefile  README.md  blog-detail.html  db.sqlite3  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: main.yml
products/: admin.py  context_processors.py  forms.py  translation.py
products/models/: __init__.py
root/: settings.py  urls.py
shop/: admin.py  authentication_backends.py  blog.py  forms.py  middleware.py  models.py  urls.py
shop/blog_post/: forms.py  models.py  validator.py  views.py
shop/templatetags/: custom_filters.py
shop/views/: __init__.py  about_us.py  accessories.py  add_to_cart.py  blog_list.py  checkout.py  compare.py  contact.py  error.py  homepage.py  login_register.py  page_log_reg.py  product.py  search.py  shop.py  smartwatch.py  utils.py  wishlist.py
static/: profile.css  style.css
templates/: base.html  search-result.html
templates/about_us/: about-us.html
templates/accessories/: accessories.html
templates/blog/: blog-2-column.html  blog-2.html  blog-3-column.html  blog-audio-format.html  blog-details-left-sidebar.html  blog-details-right-sidebar.html  blog-gallery-format.html  blog-left-sidebar3.html  blog-list-left-sidebar.html  blog-list-right-sidebar.html  blog-list.html  blog-right-sidebar4.html  blog-video-format.html
templates/checkout/: checkout.html  order_success.html
templates/compare/: compare.html
templates/contact/: contact.html
templates/home/: index.html
templates/login-register/: forgot_password.html  login-register.html  otp.html
templates/pages/: 404.html  (+10 more)
(+49 files in other folders)
