[tool.poetry]
name = "limom"
version = "0.1.0"
description = ""
authors = ["rashidiy <bubbless7456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
python-dotenv = "^1.0.1"
django-resized = "^1.0.3"
django-ckeditor = "^6.7.2"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
